# WP2-IEEE-Gobecom2024

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Data/: strategies.json
Data/Configuration/: experiment_configuration.json  near_experiment_configuration.json  proposal_experiment_configuration.json
Docker/: Dockerfile
adaptive_padding/: compute_byte_overhead.py  constants.py  make_plots.py  padding_strategies_evaluation.py  prepare_features.py  run_dynamic_padding.py  run_existing_padding.py  run_nearest_padding.py  run_proposal_padding.py
adaptive_padding/experiment/: evaluation.py
adaptive_padding/padding/: exceptions.py  padding_strategy.py  strategies_mapping_factory.py
adaptive_padding/padding/adaptive_padding/: level100.py  level500.py  level700.py  level900.py
adaptive_padding/padding/dynamic_programming/: dp_padding.py
adaptive_padding/padding/existing/: exponential_padding.py  linear.py  mouse_elephant.py  mtu.py  random.py  random_255.py
adaptive_padding/padding/nearest/: OptimalPadding.jl  external_integration.py  install_dependencies.jl  nearest_padding.py
adaptive_padding/utils/: utils.py
adaptive_padding/utils/graphs/: graph.py
tests/adaptive_padding/: conftest.py  test_level100.py  test_level900.py
tests/existing/: conftest.py  test_exponential.py  test_mtu.py
tests/nearest/: conftest.py  external_integration_mock.py  test_nearest_padding.py
