[tool.poetry]
name = "adaptive_padding"
version = "0.1.0"
description = ""
authors = ["ajp"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
numpy = "^1.26.4"
imblearn = "^0.0"
tqdm = "^4.66.2"
pyarrow = "^15.0.0"
typer = "^0.9.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
